Resolve conflicts in managin staff modules