@@ -1,33 +1,21 @@
 package controller.staff.exam;
-
 import dto.*;
 import model.*;
-
 import java.util.*;
-
 import service.ExamRegistrationService;
-
 import service.impl.ExamRegistrationServiceImpl;
-
 import dao.AuditDAO;
 import dao.impl.AuditDAOImpl;
 import service.ExamSessionControlService;
 import service.impl.ExamSessionControlServiceImpl;
-
 import dto.SessionDTO;
-
 import dto.CandidateEnrollmentDTO;
-
 import model.Audit;
-
 import service.CandidatePhotoService;
 import service.impl.CandidatePhotoServiceImpl;
-
-import service.CandidateCallBoardService;
-import service.impl.CandidateCallBoardServiceImpl;
-
+import service.CandidatePhotoService;
+import service.impl.CandidatePhotoServiceImpl;
 import dto.CandidateCallBoardStateDTO;
-
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
@@ -36,53 +24,44 @@ import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 import java.io.IOException;
 import java.util.List;
-import service.EnumMappingService;
-import service.impl.EnumMappingServiceImpl;
-
+import enums.UserRole;
+import enums.ExamSessionStatus;
 @WebServlet("/views/staff/exam/candidatecall")
 public class CandidateCallServlet extends HttpServlet {
-
-    private final EnumMappingService enumMappingService = new EnumMappingServiceImpl();
-
+    private static final String CALL_BOARD_CONTEXT_KEY = "candidateCallBoards";
+    private final ExamSessionControlService sessionControlService = new ExamSessionControlServiceImpl();
     private final ExamRegistrationService regService = new ExamRegistrationServiceImpl();
     private final AuditDAO auditDAO = new AuditDAOImpl();
     private final ExamSessionControlService sessionService = new ExamSessionControlServiceImpl();
     private final CandidatePhotoService photoService = new CandidatePhotoServiceImpl();
-    private final CandidateCallBoardService callBoardService = new CandidateCallBoardServiceImpl();
-
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-
         HttpSession session = request.getSession();
-
         if ("desk".equals(request.getParameter("view"))) {
             String deskSbd = request.getParameter("sbd");
-            if (deskSbd == null || deskSbd.trim().isEmpty()) {
+            if (deskSbd == null || deskSbd.isBlank()) {
                 deskSbd = (String) session.getAttribute("callingSbd");
             }
-            if (deskSbd != null && !deskSbd.trim().isEmpty()) {
+            if (deskSbd != null && !deskSbd.isBlank()) {
                 response.sendRedirect("procedure?sbd=" + deskSbd);
             } else {
                 response.sendRedirect("procedure");
             }
             return;
         }
-
         int examSessionId = 2;
         Integer selectedSessionId = (Integer) session.getAttribute("selectedSessionId");
         if (selectedSessionId != null) {
             examSessionId = selectedSessionId;
         }
-
         String shiftEndedVal = (String) session.getAttribute("shiftEnded");
         boolean isShiftEnded = "true".equals(shiftEndedVal);
         SessionDTO SessionDTO = sessionService.getSessionById(examSessionId);
-        if (SessionDTO != null && enumMappingService.isSessionEnded(SessionDTO.getStatus())) {
+        if (SessionDTO != null && ExamSessionStatus.isEnded(SessionDTO.getStatus())) {
             isShiftEnded = true;
             session.setAttribute("shiftEnded", "true");
         }
-
         List<CandidateEnrollmentDTO> candidateQueue = null;
         String webRoot = request.getServletContext().getRealPath("/");
         if (!isShiftEnded) {
@@ -91,24 +70,20 @@ public class CandidateCallServlet extends HttpServlet {
             session.setAttribute("candidateQueue", candidateQueue);
             session.setAttribute("lastLoadedSessionId", examSessionId);
         }
-
         // 2. Handle operations
         String qAction = request.getParameter("action");
         String qSbd = request.getParameter("sbd");
-
         List<CandidateEnrollmentDTO> permanentAbsents = (List<CandidateEnrollmentDTO>) session.getAttribute("permanentAbsents");
         if (permanentAbsents == null) {
             permanentAbsents = new ArrayList<>();
             session.setAttribute("permanentAbsents", permanentAbsents);
         }
-
         if ("startCall".equals(qAction)) {
             if (candidateQueue != null) {
                 for (CandidateEnrollmentDTO c : candidateQueue) {
                     boolean isDone = c.isPaymentCompleted() && c.isValidCapturedPhoto();
                     if (!isDone) {
                         session.setAttribute("callingSbd", String.valueOf(c.getSbd()));
-
                         // Insert call record in database
                         Audit audit = new Audit();
                         audit.setUserId(3); // Default staff
@@ -137,7 +112,6 @@ public class CandidateCallServlet extends HttpServlet {
                 if (foundIdx != -1) {
                     CandidateEnrollmentDTO removed = candidateQueue.remove(foundIdx);
                     candidateQueue.add(removed); // Move to the end of the queue
-
                     // Insert Call Record as Absent in DB
                     Audit audit = new Audit();
                     audit.setUserId(3);
@@ -150,14 +124,12 @@ public class CandidateCallServlet extends HttpServlet {
                     audit.setNewValue(detail);
                     auditDAO.insert(audit);
                 }
-
                 // Find next candidate who is not done
                 String nextSbd = null;
                 for (CandidateEnrollmentDTO c : candidateQueue) {
                     boolean isDone = c.isPaymentCompleted() && c.isValidCapturedPhoto();
                     if (!isDone && !String.valueOf(c.getSbd()).equals(qSbd)) {
                         nextSbd = String.valueOf(c.getSbd());
-
                         // Register a calling log for next person
                         Audit audit = new Audit();
                         audit.setUserId(3);
@@ -173,7 +145,6 @@ public class CandidateCallServlet extends HttpServlet {
                     }
                 }
                 session.setAttribute("callingSbd", nextSbd);
-
                 if ("autoAbsent".equals(qAction)) {
                     request.setAttribute("autoAbsentAlert", qSbd);
                 } else {
@@ -193,17 +164,14 @@ public class CandidateCallServlet extends HttpServlet {
                 if (foundIdx != -1) {
                     CandidateEnrollmentDTO removed = candidateQueue.remove(foundIdx);
                     permanentAbsents.add(removed);
-
                     regService.updateScores(removed.getId(), 0, "failed", 0, "failed");
                     regService.markAbsent(removed.getId());
-
                     removed.setAbsent(true);
                     removed.setTheoryPassed("failed");
                     removed.setPracticalPassed("failed");
                     removed.setTheoryScore(0);
                     removed.setPracticalScore(0);
                 }
-
                 // Find next candidate who is not done
                 String nextSbd = null;
                 for (CandidateEnrollmentDTO c : candidateQueue) {
@@ -228,21 +196,17 @@ public class CandidateCallServlet extends HttpServlet {
                 }
                 if (foundIdx != -1) {
                     CandidateEnrollmentDTO restored = permanentAbsents.remove(foundIdx);
-
                     // Reset fields
                     restored.setAbsent(false);
                     restored.setTheoryPassed("none");
                     restored.setPracticalPassed("none");
                     restored.setTheoryScore(null);
                     restored.setPracticalScore(null);
-
                     regService.clearAbsentMarking(restored.getId());
-
                     // Put back to queue
                     if (candidateQueue != null) {
                         candidateQueue.add(0, restored); // Put at the beginning so they can be called next!
                     }
-
                     session.setAttribute("callingSbd", String.valueOf(restored.getSbd())); // Set as active call immediately
                     request.setAttribute("undoAlert", qSbd);
                 }
@@ -279,9 +243,8 @@ public class CandidateCallServlet extends HttpServlet {
             response.sendRedirect("candidatecall");
             return;
         }
-
         advanceCallingIfDone(session, candidateQueue);
-        CandidateCallBoardStateDTO state = callBoardService.getState(getServletContext(), examSessionId);
+        CandidateCallBoardStateDTO state = getCallBoardState(examSessionId);
         if (state != null) {
             String callingSbd = (String) session.getAttribute("callingSbd");
             if (callingSbd != null) {
@@ -289,11 +252,10 @@ public class CandidateCallServlet extends HttpServlet {
             }
             state.setShiftEnded("true".equals(session.getAttribute("shiftEnded")));
         }
-
         String callingSbd = (String) session.getAttribute("callingSbd");
         String nextSbd = null;
         if (candidateQueue != null) {
-            if (callingSbd == null || callingSbd.trim().isEmpty()) {
+            if (callingSbd == null || callingSbd.isBlank()) {
                 for (CandidateEnrollmentDTO c : candidateQueue) {
                     if (!(c.isPaymentCompleted() && c.isValidCapturedPhoto())) {
                         nextSbd = String.valueOf(c.getSbd());
@@ -315,7 +277,6 @@ public class CandidateCallServlet extends HttpServlet {
                 }
             }
         }
-
         CandidateEnrollmentDTO nextCallingCandidate = null;
         if (nextSbd != null && candidateQueue != null) {
             for (CandidateEnrollmentDTO c : candidateQueue) {
@@ -326,22 +287,19 @@ public class CandidateCallServlet extends HttpServlet {
             }
         }
         request.setAttribute("nextCallingCandidate", nextCallingCandidate);
-
         request.getRequestDispatcher("/views/staff/exam/candidatecall.jsp").forward(request, response);
     }
-
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         doGet(request, response);
     }
-
     private void advanceCallingIfDone(HttpSession session, List<CandidateEnrollmentDTO> candidateQueue) {
         if (candidateQueue == null) {
             return;
         }
         String callingSbd = (String) session.getAttribute("callingSbd");
-        if (callingSbd == null || callingSbd.trim().isEmpty()) {
+        if (callingSbd == null || callingSbd.isBlank()) {
             return;
         }
         CandidateEnrollmentDTO current = null;
@@ -363,5 +321,24 @@ public class CandidateCallServlet extends HttpServlet {
             break;
         }
         session.setAttribute("callingSbd", nextSbd);
+    }
+    @SuppressWarnings("unchecked")
+    private CandidateCallBoardStateDTO getCallBoardState(int examSessionId) {
+        if (examSessionId <= 0) {
+            return null;
+        }
+        jakarta.servlet.ServletContext ctx = getServletContext();
+        Map<Integer, CandidateCallBoardStateDTO> boards =
+                (Map<Integer, CandidateCallBoardStateDTO>) ctx.getAttribute(CALL_BOARD_CONTEXT_KEY);
+        if (boards == null) {
+            synchronized (ctx) {
+                boards = (Map<Integer, CandidateCallBoardStateDTO>) ctx.getAttribute(CALL_BOARD_CONTEXT_KEY);
+                if (boards == null) {
+                    boards = new HashMap<>();
+                    ctx.setAttribute(CALL_BOARD_CONTEXT_KEY, boards);
+                }
+            }
+        }
+        return boards.computeIfAbsent(examSessionId, id -> new CandidateCallBoardStateDTO());
     }
 }
