@@ -1,32 +1,23 @@
 package util;
-
-
-/**
- * Minimal helpers for reading & trimming request parameters.
- */
 public final class Sanitize {
-
     private Sanitize() {
     }
-
-    public static String text(String v) {
-        return v == null ? "" : v.trim();
+    public static String text(String str) {
+        return str == null ? "" : str.trim();
     }
-
-    public static int toInt(String v, int def) {
+    public static int toInt(String str, int def) {
         try {
-            return Integer.parseInt(v.trim());
+            return Integer.parseInt(str.trim());
         } catch (Exception e) {
             return def;
         }
     }
-
-    public static Integer toIntegerOrNull(String v) {
-        if (v == null || v.trim().isEmpty()) {
+    public static Integer toIntegerOrNull(String str) {
+        if (str == null || str.isBlank()) {
             return null;
         }
         try {
-            return Integer.valueOf(v.trim());
+            return Integer.valueOf(str.trim());
         } catch (Exception e) {
             return null;
         }
